# JukeBox

./: .gitignore  .gitmodules  README.md
.github/workflows/: build-firmware.yaml  build-firmware.yml  build-hardware-case.yaml  build-hardware-pcb.yaml  build-software.yaml  build-software.yml  build.yaml  build.yml
assets/: .gitignore  textlogo.soda
board/: .gitignore  JuiceBox.kicad_pcb  JuiceBox.kicad_pro  JuiceBox.kicad_sch  JukeBox.kicad_pcb  JukeBox.kicad_pro  JukeBox.kicad_sch  fp-lib-table  sym-lib-table
board/footprints/: GCT_USB4085-GF-A_REVA4.kicad_mod
board/footprints/JukeBox.pretty/: GCT_USB4105-GF-A.kicad_mod  Kailh_Choc_MX_Key.kicad_mod
desktop/: Form1.Designer.cs  Form1.cs  Program.cs  README.md
desktop-linux/: Cargo.toml
desktop-linux/src/: main.rs  serial.rs  util.rs
desktop-win/: .gitignore  JukeBoxDesktop.csproj  JukeBoxDesktop.sln  MainForm.Designer.cs  MainForm.cs  Program.cs  README.md  app.manifest
desktop-win/JukeBoxDesktop/: JukeBoxDesktop.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs
docs/: flashing-firmware.md  program-compatibility.md  programming-the-mcu-from-scratch.md
firmware/: Cargo.toml  README.md
firmware-rs/: Cargo.toml
firmware-rs/src/: main.rs  mutex.rs  peripheral.rs  pins.rs  util.rs
firmware-rs/src/modules/: keyboard.rs  led.rs  rgb.rs  screen.rs  serial.rs
firmware/include/: common.h  config.h  font.h  keyboard.h  lcd.h  led.h  rgb.h  serial.h  st7789_lcd.h  tusb_config.h
firmware/src/: color.rs  keyboard.c  lcd.c  led.c  main.c  main.rs  peripheral.rs  pins.rs  rgb.c  serial.c  st7789.rs  st7789_lcd.c
firmware/src/modules/: keyboard.rs  led.rs  rgb.rs  screen.rs  serial.rs
hardware-case/: README.md  build.sh  case.scad
hardware-pcb/: JukeBox.kicad_pcb  JukeBox.kicad_pro  JukeBox.kicad_sch  README.md  sym-lib-table
hardware-pcb/footprints/: USON-8_UX_2x3x0p6_WIN.step
hardware-pcb/footprints/JukeBox.pretty/: st7789v.kicad_mod  (+1 more)
hardware-pcb/symbols/: ECS-120-20-33-AEL-TR.kicad_sym  W25Q64JVZPIQ-TR.kicad_sym
hardware/board/: JukeBox.kicad_pcb  JukeBox.kicad_sch  README.md
hardware/prints/: case.scad
mcu/: CMakeLists.txt  README.md  platformio.ini
mcu/boards/: atmega16u2.json  atmega8u2.json
mcu/include/: common.h  config.h  descriptors.h  font.h  keyboard.h  lcd.h  led.h  serial.h  st7789_lcd.h  tusb_config.h  usb_descriptors.h  ws2812_rgb.h
mcu/misc/: 99-ATmega8U2-DFU.rules  mkfont.py
mcu/src/: callbacks.c  descriptors.c  keyboard.c  lcd.c  led.c  main.c  main.cpp  rgb.c  serial.c  st7789_lcd.c  usb_descriptors.c  ws2812_rgb.c
prints/stl/: case-bottom.stl  case-leg.stl  case-top-cherry-mx.stl  case-top-kailh-choc.stl  cherry-mx-keycap.stl
software/: Cargo.toml  Cross.toml  README.md  build.rs
software/desktop-linux/: Cargo.toml  build.rs
software/desktop-linux/src/: main.rs
software/desktop-win/: .gitignore  JukeBoxDesktop.sln  MainForm.cs  README.md  app.manifest
software/jukebox_util/: Cargo.toml
software/jukebox_util/src/: lib.rs  peripheral.rs  protocol.rs
software/src/: cli.rs  config.rs  gui.rs  main.rs  reaction.rs  serial.rs  splash.rs  system.rs  util.rs
(+1 files in other folders)
