[package]
name = "jukeboxcli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.1"
log = "0.4.20"
nvml-wrapper = "0.9.0"
pretty-bytes = "0.2.2"
serialport = "4.2.2"
stderrlog = "0.5.4"
sysinfo = "0.29.11"

[build-dependencies]
winres = "0.1.12"

# [patch.crates-io]
# sysinfo = { path = "../../sysinfo" }
