[package]
name = "jukeboxcli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
eframe = "0.25.0"
egui = "0.25.0"
log = "0.4.20"
nvml-wrapper = "0.9.0"
once_cell = "1.19.0"
open = "5.1.2"
rand = "0.8.5"
serialport = "4.3.0"
stderrlog = "0.5.4"
sysinfo = "0.30.0"

[build-dependencies]
winres = "0.1.12"
